<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UserFIlterActivity">

    <TextView
        android:id="@+id/UserFilterExplain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/FilterDateExplain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/StartDateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/StartDateFrame"
        app:layout_constraintTop_toBottomOf="@+id/StartDateFrame" />

    <TextView
        android:id="@+id/EndDateDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/EndDateFrame"
        app:layout_constraintTop_toBottomOf="@+id/EndDateFrame" />

    <FrameLayout
        android:id="@+id/StartDateFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserFilterExplain">

        <TextView
            android:id="@+id/StartDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:text="@string/StartDateText"
            android:textSize="24sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/EndDateFrame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        app:layout_constraintEnd_toEndOf="@+id/StartDateFrame"
        app:layout_constraintStart_toStartOf="@+id/StartDateFrame"
        app:layout_constraintTop_toBottomOf="@+id/StartDateDate">

        <TextView
            android:id="@+id/EndDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:text="@string/EndDateText"
            android:textSize="24sp" />
    </FrameLayout>

    <Button
        android:id="@+id/ResetStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/FilterResetDateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/StartDateFrame" />

    <Button
        android:id="@+id/ResetEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/FilterResetDateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EndDateFrame" />

    <Button
        android:id="@+id/ActivateFilterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ActivateFilterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EndDateDate" />

</androidx.constraintlayout.widget.ConstraintLayout>